manifestos-k8s/evaluation-service/svc-evaluation-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: evaluation-service-svc
  namespace: default
spec:
  selector:
    app: evaluation-service
  ports:
  - name: http
    port: 80
    targetPort: 8004
