manifestos-k8s/evaluation-service/ingress-evaluation-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: evaluation-service-ing
  namespace: evaluation-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
        - path: /evaluation(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: evaluation-service-svc
              port:
                number: 8004
